
  * Upgrade to latest upstream version. Rules updates have been dropped
    by Snort upstream for older releases.  Snort 2.9.5.3 is not supported for
    rule updates since December 2013 (Closes: #753915)
    For more information see: https://www.snort.org/eol
  * debian/patches/{config,config_disabled_rules,fix_upstream_typos}: Refresh
    to apply to the newest source

 -- Javier Fernández-Sanguino Peña <jfs@debian.org>  Fri, 24 Oct 2014 02:04:35 +0200

snort (2.9.5.3-4) unstable; urgency=medium

  * debian/control: Drop libgnutls-dev, as it is not longer required and it is scheduled
    for removal in sid, and (apparently) uninstallable. (Closes: #764108)
  * debian/control, debian/rules: Run dh-autoreconf when building to update
    config.{sub, guess} and {libtool, aclocal}.m4 (Closes:  #748713)
  * debian/snort.init.d: Change the permissions of the snort PIDFILE once
    snort is started in order to prevent the following error messages when
    snort is *re*started:

    snort[xxxx]: Could not remove pid file /var/run//snort_eth0.pid: Permission denied

    (Closes: #753914)
  * debian/snort-stat.8: Fix filename of the alert log file and point to the
    correct location.
  * Debconf updated Translations:
    - Updated Russian translation, contributed by Yuri Kozlov 
      (Closes: 729710, #721483)

 -- Javier Fernández-Sanguino Peña <jfs@debian.org>  Mon, 06 Oct 2014 20:11:15 +0200

snort (2.9.5.3-3) unstable; urgency=low

  * debian/control: Add texlive-binaries and texlive-font-utils to
     Build-Depends-Indep to make sure that buildds have the binaries
     required to build the documentation as suggested by Hideki Yamane.
     Kept the texlive metapackage however in debian/control just int case.
     (Closes: 713254) 
  * Debconf updated Translations:
    - Updated Russian translation, contributed by Yuri Kozlov (Closes: 722987)

 -- Javier Fernández-Sanguino Peña <jfs@debian.org>  Mon, 21 Oct 2013 19:39:20 +0200
