@@ -13,7 +13,8 @@ Build-Depends:
     libdaq-dev, 
     flex, 
     bison,
-    dh-autoreconf
+    dh-autoreconf,
+    dpkg-dev (>= 1.16.1~)
 Build-Depends-Indep: 
     texlive, 
     texlive-binaries, 
